// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`icon > Icon and internal link on same line 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "content": "",
        "href": "Internal link",
        "pathType": "relative",
        "raw": "[Internal link]",
        "type": "link",
      },
      {
        "path": "me",
        "pathType": "relative",
        "raw": "[me.icon]",
        "type": "icon",
      },
    ],
    "type": "line",
  },
]
`;

exports[`icon > Multiple icons 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "path": "me",
        "pathType": "relative",
        "raw": "[me.icon*3]",
        "type": "icon",
      },
      {
        "path": "me",
        "pathType": "relative",
        "raw": "[me.icon*3]",
        "type": "icon",
      },
      {
        "path": "me",
        "pathType": "relative",
        "raw": "[me.icon*3]",
        "type": "icon",
      },
    ],
    "type": "line",
  },
]
`;

exports[`icon > Simple relative icon 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "path": "me",
        "pathType": "relative",
        "raw": "[me.icon]",
        "type": "icon",
      },
    ],
    "type": "line",
  },
]
`;

exports[`icon > Simple root icon 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "path": "/icons/+1",
        "pathType": "root",
        "raw": "[/icons/+1.icon]",
        "type": "icon",
      },
    ],
    "type": "line",
  },
]
`;
